[gd_scene load_steps=2 format=3 uid="uid://bp2jb5v8ejy7x"]

[ext_resource type="Script" uid="uid://bupsri4467p07" path="res://script/title_screen.gd" id="1_fgkus"]

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fgkus")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1

[node name="TitleContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -225.0
offset_right = 200.0
offset_bottom = 225.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="GameLogo" type="TextureRect" parent="TitleContainer"]
custom_minimum_size = Vector2(400, 150)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="TitleLabel" type="Label" parent="TitleContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "BLACKJACK"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="TitleContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="ButtonsContainer" type="VBoxContainer" parent="TitleContainer"]
custom_minimum_size = Vector2(300, 250)
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="PlayButton" type="Button" parent="TitleContainer/ButtonsContainer"]
custom_minimum_size = Vector2(250, 60)
layout_mode = 2
size_flags_horizontal = 4
text = "PLAY GAME"

[node name="OptionsButton" type="Button" parent="TitleContainer/ButtonsContainer"]
custom_minimum_size = Vector2(250, 60)
layout_mode = 2
size_flags_horizontal = 4
text = "OPTIONS"

[node name="HowToPlayButton" type="Button" parent="TitleContainer/ButtonsContainer"]
custom_minimum_size = Vector2(250, 60)
layout_mode = 2
size_flags_horizontal = 4
text = "HOW TO PLAY"

[node name="QuitButton" type="Button" parent="TitleContainer/ButtonsContainer"]
custom_minimum_size = Vector2(250, 60)
layout_mode = 2
size_flags_horizontal = 4
text = "QUIT"

[node name="VersionLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -50.0
offset_top = -26.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0
text = "v0.1.0"
horizontal_alignment = 2

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
autoplay = true

[connection signal="pressed" from="TitleContainer/ButtonsContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="TitleContainer/ButtonsContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="TitleContainer/ButtonsContainer/HowToPlayButton" to="." method="_on_how_to_play_button_pressed"]
[connection signal="pressed" from="TitleContainer/ButtonsContainer/QuitButton" to="." method="_on_quit_button_pressed"]
